# rust-dp-framework

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: cli.rs  lib.rs  web.rs
data-layer/: Cargo.toml
data-layer/src/: csv_stream.rs  json_stream.rs  lib.rs  stream.rs  stream_queries.rs  table.rs
data-layer/src/tests/: test_csv_stream.rs  test_json_stream.rs  test_stream_queries.rs
examples/: Cargo.toml
examples/src/: example_basic.rs  example_stream.rs  lib.rs
mechanisms/: Cargo.toml
mechanisms/src/: aggregate.rs  calibrate.rs  clip.rs  error.rs  exponential.rs  gaussian.rs  laplace.rs  lib.rs  noise.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs  runner.rs
preprocessing/: Cargo.toml
preprocessing/src/: error.rs  lib.rs  normalization.rs
preprocessing/src/adapters/: clip.rs  filter.rs  map.rs  mod.rs  moving_avg.rs  scale.rs  zscore.rs
preprocessing/src/tests/: test_adapters.rs
privacy-accounting/: Cargo.toml
privacy-accounting/src/: accountant.rs  lib.rs
