    [package]
    name = "data-layer"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true
    description = "Data Layer crate (skeleton; no implementation)."
    
    [lib]
    name = "data_layer"
    path = "src/lib.rs"
    
[dependencies]
