    [package]
    name = "data-layer"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true
    description = "Data Layer crate (skeleton; no implementation)."
    
    [lib]
    name = "data_layer"
    path = "src/lib.rs"
    
[dependencies]
approx = "0.5.1"
tempfile = "3.22.0"
serde_json = "1.0.145"
serde = { version = "1", features = ["derive"] }