    [package]
    name = "mechanisms"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true
    description = "Mechanisms crate (skeleton; no implementation)."
    
    [lib]
    name = "mechanisms"
    path = "src/lib.rs"
    
[dependencies]
# optional future deps (auskommentiert)
# rand = "0.8"
# rand_distr = "0.4"
# statrs = "0.16"
# thiserror = "1"

