    [package]
    name = "pipeline"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true
    description = "Pipeline crate (skeleton; no implementation)."
    
    [lib]
    name = "pipeline"
    path = "src/lib.rs"
    
[dependencies]
# optional future deps (auskommentiert)
# serde = { version = "1", features = ["derive"] }
# anyhow = "1"
# thiserror = "1"
# tracing = "0.1"
# async-trait = "0.1"
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

