    [package]
    name = "preprocessing"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true
    description = "Preprocessing crate"
    
    [lib]
    name = "preprocessing"
    path = "src/lib.rs"
    
[dependencies]
data-layer = { path = "../data-layer" }  # <- adjust if needed
thiserror = "1"

